Backed out 3 changesets (bug 1850045) for causing decision task bustages CLOSED TREE
Backed out changeset b5870683550d (bug 1850045)
Backed out changeset 4ecd1e0ccff8 (bug 1850045)
Backed out changeset 74ec20ac8f53 (bug 1850045)

--- a/taskcluster/ci/beetmover-apt/kind.yml
+++ b/taskcluster/ci/beetmover-apt/kind.yml
@@ -21,7 +21,6 @@ only-for-build-platforms:
 
 jobs:
     beetmover-apt:
-        from-deps:
-            group-by: single-with-filters
+        from-deps: {}
         run-on-releases:
             - nightly
