--- a/taskcluster/ci/beetmover-checksums/kind.yml
+++ b/taskcluster/ci/beetmover-checksums/kind.yml
@@ -19,8 +19,7 @@ only-for-attributes:
 
 jobs:
     beetmover-checksums:
-        from-deps:
-            group-by: single-with-filters
+        from-deps: {}
         shipping-phase: promote
         attributes:
             artifact_prefix: public
