--- a/taskcluster/ci/geckodriver-signing/kind.yml
+++ b/taskcluster/ci/geckodriver-signing/kind.yml
@@ -13,8 +13,9 @@ transforms:
 kind-dependencies:
     - toolchain
 
+only-for-attributes:
+    - geckodriver
+
 jobs:
     geckodriver-signing:
-        from-deps:
-            with-attributes:
-                geckodriver: [true]
+        from-deps: {}
