--- a/taskcluster/ci/partials/kind.yml
+++ b/taskcluster/ci/partials/kind.yml
@@ -34,6 +34,5 @@ only-for-build-platforms:
 
 jobs:
     partials:
-        from-deps:
-            group-by: single-with-filters
+        from-deps: {}
         shipping-phase: promote
