--- a/taskcluster/ci/release-eme-free-repack-repackage-signing/kind.yml
+++ b/taskcluster/ci/release-eme-free-repack-repackage-signing/kind.yml
@@ -20,5 +20,4 @@ only-for-build-platforms:
 
 jobs:
     release-eme-free-repack-repackage-signing:
-        from-deps:
-            group-by: single-with-filters
+        from-deps: {}
