--- a/taskcluster/ci/release-eme-free-repack-repackage/kind.yml
+++ b/taskcluster/ci/release-eme-free-repack-repackage/kind.yml
@@ -26,8 +26,7 @@ only-for-build-platforms:
 
 jobs:
     release-eme-free-repack-repackage:
-        from-deps:
-            group-by: single-with-filters
+        from-deps: {}
         upstream-mac-kind:
             by-build-type:
                 debug: release-eme-free-repack-mac-signing
