--- a/taskcluster/ci/release-partner-repack-beetmover/kind.yml
+++ b/taskcluster/ci/release-partner-repack-beetmover/kind.yml
@@ -24,8 +24,7 @@ only-for-build-platforms:
 
 jobs:
     release-partner-repack-beetmover:
-        from-deps:
-            group-by: single-with-filters
+        from-deps: {}
         shipping-phase: promote
         partner-bucket-scope:
             by-release-level:
