--- a/taskcluster/ci/release-partner-repack-repackage-signing/kind.yml
+++ b/taskcluster/ci/release-partner-repack-repackage-signing/kind.yml
@@ -25,5 +25,4 @@ only-for-build-platforms:
 
 jobs:
     release-partner-repack-repackage-signing:
-        from-deps:
-            group-by: single-with-filters
+        from-deps: {}
