--- a/taskcluster/ci/repackage-l10n/kind.yml
+++ b/taskcluster/ci/repackage-l10n/kind.yml
@@ -35,8 +35,7 @@ only-for-build-platforms:
 
 jobs:
     repackage-l10n:
-        from-deps:
-            group-by: single-with-filters
+        from-deps: {}
         upstream-mac-kind:
             by-build-type:
                 debug: shippable-l10n-mac-signing
