--- a/taskcluster/ci/repackage-signing-l10n/kind.yml
+++ b/taskcluster/ci/repackage-signing-l10n/kind.yml
@@ -27,5 +27,4 @@ only-for-build-platforms:
 
 jobs:
     repackage-signing-l10n:
-        from-deps:
-            group-by: single-with-filters
+        from-deps: {}
