--- a/taskcluster/ci/repackage-signing-msi/kind.yml
+++ b/taskcluster/ci/repackage-signing-msi/kind.yml
@@ -23,5 +23,4 @@ only-for-build-platforms:
 
 jobs:
     repackage-signing-msi:
-        from-deps:
-            group-by: single-with-filters
+        from-deps: {}
