--- a/taskcluster/ci/repackage-signing-msix/kind.yml
+++ b/taskcluster/ci/repackage-signing-msix/kind.yml
@@ -15,5 +15,4 @@ kind-dependencies:
 
 jobs:
     repackage-signing-msix:
-        from-deps:
-            group-by: single-with-filters
+        from-deps: {}
