--- a/taskcluster/ci/attribution/kind.yml
+++ b/taskcluster/ci/attribution/kind.yml
@@ -6,7 +6,6 @@ loader: gecko_taskgraph.loader.transform:loader
 
 transforms:
     - gecko_taskgraph.transforms.attribution:transforms
-    - taskgraph.transforms.task_context
     - gecko_taskgraph.transforms.job:transforms
     - gecko_taskgraph.transforms.task:transforms
 
@@ -30,10 +29,6 @@ job-defaults:
         symbol: Attr
         kind: other
         tier: 1
-    task-context:
-        from-file: browser/installer/attribution.yml
-        substitution-fields:
-            - run.command
     worker:
         artifacts:
             - name: public/build
@@ -59,6 +54,8 @@ job-defaults:
             # attribution of other files, which they can append themselves.
             - --input
             - /builds/worker/fetches/target.installer.exe
+        command-context:
+            from-file: browser/installer/attribution.yml
 
 jobs:
     win32-devedition/opt:
