--- a/taskcluster/ci/build-mac-signing/kind.yml
+++ b/taskcluster/ci/build-mac-signing/kind.yml
@@ -25,8 +25,7 @@ only-for-build-platforms:
 
 jobs:
     build-mac-signing:
-        from-deps:
-            group-by: single-with-filters
+        from-deps: {}
         treeherder:
             symbol: BMS
         enable-signing-routes: false
