--- a/taskcluster/ci/mar-signing-autograph-stage/kind.yml
+++ b/taskcluster/ci/mar-signing-autograph-stage/kind.yml
@@ -18,8 +18,7 @@ only-for-build-platforms:
 
 jobs:
     mar-signing-autograph-stage:
-        from-deps:
-            group-by: single-with-filters
+        from-deps: {}
         shipping-phase: null
         treeherder-group: ms-stage
         treeherder:
