--- a/taskcluster/ci/partials-signing/kind.yml
+++ b/taskcluster/ci/partials-signing/kind.yml
@@ -15,8 +15,7 @@ kind-dependencies:
 
 jobs:
     partials-signing:
-        from-deps:
-            group-by: single-with-filters
+        from-deps: {}
         shipping-phase: promote
         treeherder-group: ps
         description-suffix: 'partial signing'
