--- a/taskcluster/ci/release-beetmover-signed-langpacks-checksums/kind.yml
+++ b/taskcluster/ci/release-beetmover-signed-langpacks-checksums/kind.yml
@@ -15,8 +15,7 @@ kind-dependencies:
 
 jobs:
     release-beetmover-signed-langpacks-checksums:
-        from-deps:
-            group-by: single-with-filters
+        from-deps: {}
         shipping-phase: promote
         attributes:
             artifact_prefix: public
