--- a/taskcluster/ci/repackage/kind.yml
+++ b/taskcluster/ci/repackage/kind.yml
@@ -43,8 +43,7 @@ only-for-build-platforms:
 
 jobs:
     repackage:
-        from-deps:
-            group-by: single-with-filters
+        from-deps: {}
         upstream-mac-kind:
             by-build-type:
                 debug: build-mac-signing
