Bug 1851416 - Properly guard that the proxy hasn't been revoked r=iain
Maybe a little bit alarming how simple this testcase is.

Differential Revision: https://phabricator.services.mozilla.com/D187511

--- a/js/src/jit/CacheIROps.yaml
+++ b/js/src/jit/CacheIROps.yaml
@@ -668,7 +668,7 @@
   transpile: true
   cost_estimate: 1
   args:
-    result: ObjId
+    result: ValId
     obj: ObjId
 
 - name: IdToStringOrSymbol
