Bug 1851872 part 2 - Use weak GetterSetter pointer for GuardHasGetterSetter. r=iain
Differential Revision: https://phabricator.services.mozilla.com/D187580

--- a/js/src/jit/CacheIROps.yaml
+++ b/js/src/jit/CacheIROps.yaml
@@ -578,7 +578,7 @@
   args:
     obj: ObjId
     id: IdField
-    getterSetter: GetterSetterField
+    getterSetter: WeakGetterSetterField
 
 - name: GuardInt32IsNonNegative
   shared: true
