--- a/js/src/jit/CacheIROps.yaml
+++ b/js/src/jit/CacheIROps.yaml
@@ -505,7 +505,7 @@
   custom_writer: true
   args:
     obj: ObjId
-    expected: BaseScriptField
+    expected: WeakBaseScriptField
     nargsAndFlags: RawInt32Field
 
 - name: GuardSpecificAtom
