Bug 1850536 - Mark some tests mochitest-webgl tests as passing with Wayland, r=jmaher,jgilbert
Differential Revision: https://phabricator.services.mozilla.com/D187134

--- a/dom/canvas/test/webgl-conf/generated-mochitest.ini
+++ b/dom/canvas/test/webgl-conf/generated-mochitest.ini
@@ -5418,7 +5418,7 @@ subsuite = webgl2-ext
 subsuite = webgl2-ext
 [generated/test_2_conformance2__glsl3__valid-invariant.html]
 subsuite = webgl2-ext
-fail-if = (os == 'linux')
+fail-if = (os == 'linux' && display != 'wayland')
 [generated/test_2_conformance2__glsl3__varying-struct-inline-definition.html]
 subsuite = webgl2-ext
 [generated/test_2_conformance2__glsl3__vector-dynamic-indexing-nv-driver-bug.html]
@@ -7932,7 +7932,7 @@ subsuite = webgl2-ext
 subsuite = webgl2-ext
 [generated/test_2_conformance__glsl__bugs__sampler-array-using-loop-index.html]
 subsuite = webgl2-ext
-fail-if = (os == 'linux')
+fail-if = (os == 'linux' && display != 'wayland')
 [generated/test_2_conformance__glsl__bugs__sampler-struct-function-arg.html]
 subsuite = webgl2-ext
 [generated/test_2_conformance__glsl__bugs__sequence-operator-evaluation-order.html]
@@ -11425,7 +11425,7 @@ subsuite = webgl1-ext
 subsuite = webgl1-ext
 [generated/test_conformance__glsl__bugs__sampler-array-using-loop-index.html]
 subsuite = webgl1-ext
-fail-if = (os == 'linux')
+fail-if = (os == 'linux' && display != 'wayland')
 [generated/test_conformance__glsl__bugs__sampler-struct-function-arg.html]
 subsuite = webgl1-ext
 skip-if = (os == 'linux') || (os == 'android')
