--- a/dom/canvas/test/webgl-conf/mochitest-errata.ini
+++ b/dom/canvas/test/webgl-conf/mochitest-errata.ini
@@ -410,7 +410,7 @@ skip-if = ((os == 'linux') && asan)
 [generated/test_conformance__glsl__bugs__sampler-array-using-loop-index.html]
 # Testfail on Linux after removing SH_UNROLL_FOR_LOOP_WITH_SAMPLER_ARRAY_INDEX.
 # Only happen on tryserver
-fail-if = (os == 'linux')
+fail-if = (os == 'linux' && display != 'wayland')
 
 [generated/test_conformance__misc__type-conversion-test.html]
 fail-if = (os == 'linux')
@@ -920,14 +920,14 @@ fail-if = (os == 'linux')
 [generated/test_2_conformance2__state__gl-get-calls.html]
 fail-if = (os == 'linux')
 [generated/test_2_conformance__glsl__bugs__sampler-array-using-loop-index.html]
-fail-if = (os == 'linux')
+fail-if = (os == 'linux' && display != 'wayland')
 [generated/test_conformance__rendering__line-rendering-quality.html]
 # Found 0 lines, looking in the vertical direction, expected 2
 fail-if = (os == 'linux')
 [generated/test_2_conformance__rendering__blending.html]
 fail-if = (os == 'android')
 [generated/test_2_conformance2__glsl3__valid-invariant.html]
-fail-if = (os == 'linux')
+fail-if = (os == 'linux' && display != 'wayland')
 # [unexpected link status] vertex shader with invariant varying and fragment shader with variant varying must succeed
 # [unexpected link status] vertex shader with invariant (global setting) varying and fragment shader with variant varying must succeed
 # [unexpected link status] vertex shader with invariant (separately set) varying and fragment shader with variant varying must succeed
