Bug 1850536 - Triage mochitest-webgl1-core tests, r=jmaher
Differential Revision: https://phabricator.services.mozilla.com/D187303

--- a/dom/canvas/test/webgl-conf/generated-mochitest.ini
+++ b/dom/canvas/test/webgl-conf/generated-mochitest.ini
@@ -12570,13 +12570,14 @@ subsuite = webgl1-core
 subsuite = webgl1-core
 [generated/test_conformance__rendering__gl-scissor-test.html]
 subsuite = webgl1-core
+fail-if = (display == 'wayland')
 [generated/test_conformance__rendering__gl-viewport-test.html]
 subsuite = webgl1-core
 [generated/test_conformance__rendering__line-loop-tri-fan.html]
 subsuite = webgl1-core
 [generated/test_conformance__rendering__line-rendering-quality.html]
 subsuite = webgl1-core
-fail-if = (os == 'linux')
+fail-if = (os == 'linux' && display != 'wayland')
 [generated/test_conformance__rendering__many-draw-calls.html]
 subsuite = webgl1-core
 skip-if = (os == 'android') || debug
@@ -12609,7 +12610,7 @@ subsuite = webgl1-core
 [generated/test_conformance__rendering__rendering-stencil-large-viewport.html]
 subsuite = webgl1-core
 fail-if = (os == 'mac' && !apple_silicon) || (verify && debug && (os == 'linux'))
-skip-if = (os == 'android') || (os == 'win')
+skip-if = (os == 'android') || (os == 'win') || (display == 'wayland')
 [generated/test_conformance__rendering__scissor-rect-repeated-rendering.html]
 subsuite = webgl1-core
 [generated/test_conformance__rendering__simple.html]
