--- a/dom/canvas/test/webgl-conf/mochitest-errata.ini
+++ b/dom/canvas/test/webgl-conf/mochitest-errata.ini
@@ -122,6 +122,8 @@ fail-if = (os == 'android' && android_version == "26") || (os == 'android' && !d
 [generated/test_2_conformance2__glsl3__switch-case.html]
 # https://bugzilla.mozilla.org/show_bug.cgi?id=1725442
 fail-if = (os == 'win')
+[generated/test_conformance__rendering__gl-scissor-test.html]
+fail-if = (display == 'wayland')
 
 
 ####################
@@ -534,7 +536,7 @@ fail-if = (os == 'mac' && !apple_silicon) || (verify && debug && (os == 'linux')
 # 02:53:02     INFO -  GECKO(1000) | #03: mozilla::layers::CanvasClientSharedSurface::UpdateRenderer(mozilla::gfx::IntSizeTyped<mozilla::gfx::UnknownUnits>,mozilla::MaybeOneOf<mozilla::layers::ShareableCanvasRenderer *,mozilla::layers::AsyncCanvasRenderer *> &) [gfx/layers/client/CanvasClient.cpp:412]
 # 02:53:02     INFO -  GECKO(1000) | #04: mozilla::layers::CanvasClientSharedSurface::Update(mozilla::gfx::IntSizeTyped<mozilla::gfx::UnknownUnits>,mozilla::layers::ShareableCanvasRenderer *) [gfx/layers/client/CanvasClient.cpp:381]
 # 02:53:02     INFO -  GECKO(1000) | #05: mozilla::layers::ShareableCanvasRenderer::UpdateCompositableClient() [gfx/layers/ShareableCanvasRenderer.cpp:237]
-skip-if = (os == 'android') || (os == 'win')
+skip-if = (os == 'android') || (os == 'win') || (display == 'wayland')
 [generated/test_2_conformance__rendering__rendering-stencil-large-viewport.html]
 # same as webgl1 test
 fail-if = (os == 'mac' && !apple_silicon)
@@ -923,7 +925,7 @@ fail-if = (os == 'linux')
 fail-if = (os == 'linux' && display != 'wayland')
 [generated/test_conformance__rendering__line-rendering-quality.html]
 # Found 0 lines, looking in the vertical direction, expected 2
-fail-if = (os == 'linux')
+fail-if = (os == 'linux' && display != 'wayland')
 [generated/test_2_conformance__rendering__blending.html]
 fail-if = (os == 'android')
 [generated/test_2_conformance2__glsl3__valid-invariant.html]
