Bug 1850045: fix bustage introduced by taskgraph 6.2.1 update r=ahal,taskgraph-reviewers,releng-reviewers
This is only sortof a new issue - it's come up because we longer allow `group_by` functions to be overridden, and the taskgraph version of the `single` group doesn't handle the `only-for` blocks that we use all over the place.

This patch provides a quick fix -- renaming the Gecko `single` group-by to `single-with-filters`, and using that in most places. (There were a couple of places that switching to `with-attributes` was simple enough - but in many cases we cannot yet replicate this functionality with `from-deps` alone AFAIK.)

Differential Revision: https://phabricator.services.mozilla.com/D186821

--- a/taskcluster/ci/release-partner-repack-chunking-dummy/kind.yml
+++ b/taskcluster/ci/release-partner-repack-chunking-dummy/kind.yml
@@ -21,6 +21,7 @@ only-for-build-platforms:
 jobs:
     release-partner-repack-chunking-dummy:
         from-deps:
+            group-by: single-with-filters
             copy-attributes: true
         shipping-phase: promote
         shipping-product: firefox
