--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -12417,6 +12417,15 @@
   value: false
   mirror: always
 
+# The congestion control algorithm with which to configure neqo.
+# 0 => NewReno
+# 1 => Cubic
+- name: network.http.http3.cc_algorithm
+  type: RelaxedAtomicUint32
+  value: 1
+  mirror: always
+  rust: true
+
 # When true, a http request will be upgraded to https when HTTPS RR is
 # available.
 - name: network.dns.upgrade_with_https_rr
