Bug 1851036 - Add events for displaying the shopping component's address bar icon r=Gijs,TravisLong
Differential Revision: https://phabricator.services.mozilla.com/D187230

--- a/browser/components/shopping/metrics.yaml
+++ b/browser/components/shopping/metrics.yaml
@@ -371,3 +371,20 @@ shopping:
       - fx-desktop-shopping-eng@mozilla.com
     send_in_pings:
       - events
+
+  address_bar_icon_displayed:
+    type: event
+    description: |
+      The Shopping product Address Bar Icon was displayed to the user.
+    bugs:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1851036
+    data_reviews:
+      - https://bugzilla.mozilla.org/show_bug.cgi?id=1841892
+    data_sensitivity:
+      - interaction
+    expires: 122
+    notification_emails:
+      - betling@mozilla.com
+      - fx-desktop-shopping-eng@mozilla.com
+    send_in_pings:
+      - events
