Bug 1852226 - update expections for secure-payment-confirmation/enrollment.https.html. r=jmaher
Differential Revision: https://phabricator.services.mozilla.com/D187797

--- a/testing/web-platform/meta/secure-payment-confirmation/enrollment.https.html.ini
+++ b/testing/web-platform/meta/secure-payment-confirmation/enrollment.https.html.ini
@@ -4,8 +4,8 @@
     if os == "mac": https://bugzilla.mozilla.org/show_bug.cgi?id=1845961
   expected:
     if os == "android": OK
-    if os == "linux" and not debug: [TIMEOUT, OK]
-    if not debug: TIMEOUT
+    if (os == "linux") and not debug: [TIMEOUT, OK]
+    if not debug: OK
     if os == "win": TIMEOUT
   [Payment credential is created successfully.]
     expected:
@@ -37,8 +37,7 @@
   [Payment credential requires authenticatorAttachment to be "platform", not "cross-platform".]
     expected:
       if os == "android": FAIL
-      if os == "win": TIMEOUT
-      FAIL
+      if os == "win": FAIL
 
   [Payment credential allows residentKey to be "preferred".]
     expected:
@@ -53,15 +52,10 @@
 
   [Payment credential abort reason with Error]
     expected:
-      if os == "win": NOTRUN
-      FAIL
+      if os == "win": FAIL
 
   [Clean up the test environment]
     expected:
       if (os == "mac") and not debug: TIMEOUT
-      if (os == "linux") and not debug: [TIMEOUT,PASS]
-      if os == "win": NOTRUN
-
-  [Payment credential abort without reason]
-    expected:
-      if os == "win": NOTRUN
+      if (os == "linux") and not debug: [TIMEOUT, PASS]
+      if os == "win": PASS
