Bug 1852364 - restore expectation for enrollment.https.html subtest on Android. r=jschanck DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D187831

--- a/testing/web-platform/meta/secure-payment-confirmation/enrollment.https.html.ini
+++ b/testing/web-platform/meta/secure-payment-confirmation/enrollment.https.html.ini
@@ -53,6 +53,7 @@
   [Payment credential abort reason with Error]
     expected:
       if os == "win": FAIL
+      if os == "android": FAIL
 
   [Clean up the test environment]
     expected:
