Bug 1852158 - Update ron to 0.8.1. r=emilio,supply-chain-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D187725

--- a/supply-chain/audits.toml
+++ b/supply-chain/audits.toml
@@ -2816,6 +2816,11 @@ who = "Jim Blandy <jimb@red-bean.com>"
 criteria = "safe-to-deploy"
 delta = "0.7.1 -> 0.8.0"
 
+[[audits.ron]]
+who = "Mike Hommey <mh+mozilla@glandium.org>"
+criteria = "safe-to-deploy"
+delta = "0.8.0 -> 0.8.1"
+
 [[audits.rure]]
 who = "Nika Layzell <nika@thelayzells.com>"
 criteria = "safe-to-deploy"
