Bug 1785412: Let ARIA reflection (non-idref) and default Accessibility Semantics for Custom Elements ride the trains. r=eeejay
Differential Revision: https://phabricator.services.mozilla.com/D187439

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -214,7 +214,7 @@
 
 - name: accessibility.ARIAReflection.enabled
   type: bool
-  value: @IS_NIGHTLY_BUILD@
+  value: true
   mirror: always
 
 # Whether form controls and images should be focusable with mouse, in content
