Bug 1850872 - updating probe pwmgr.doorhanger_submitted#doorhanger_submitted  to expire in Fx142 r=credential-management-reviewers,dimi
Differential Revision: https://phabricator.services.mozilla.com/D187786

--- a/toolkit/components/telemetry/Events.yaml
+++ b/toolkit/components/telemetry/Events.yaml
@@ -1390,8 +1390,8 @@ pwmgr:
       updates to the doorhanger may change whether a login is actually saved or updated, but will
       not impact the sent object.
     objects: ["save", "update"]
-    bug_numbers: [1650929, 1650941, 1678200, 1714252, 1754637]
-    expiry_version: "120"
+    bug_numbers: [1650929, 1650941, 1678200, 1714252, 1754637, 1850872]
+    expiry_version: "142"
     release_channel_collection: opt-out
     products: ["firefox"]
     record_in_processes: [main]
