Bug 1851721: test(webgpu): adjust CTS expectations on Linux to observe recent intermittents r=webgpu-reviewers,jgilbert
Differential Revision: https://phabricator.services.mozilla.com/D187615

--- a/testing/web-platform/mozilla/meta/webgpu/chunked/30/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/30/cts.https.html.ini
@@ -95,7 +95,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -142,7 +144,9 @@
     expected: FAIL
 
   [:type="i32";inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:type="i32";inputSource="storage_r";vectorize=3]
     expected: FAIL
