--- a/testing/web-platform/mozilla/meta/webgpu/chunked/31/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/31/cts.https.html.ini
@@ -78,7 +78,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
@@ -188,7 +190,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -223,7 +227,9 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="uniform";vectorize=3]
     expected: FAIL
@@ -739,7 +745,9 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize_rhs=3]
-    expected: [FAIL, PASS]
+    expected:
+      if os == "linux": [PASS, FAIL]
+      [FAIL, PASS]
 
   [:inputSource="uniform";vectorize_rhs=4]
     expected: FAIL
@@ -843,7 +851,9 @@
     expected: FAIL
 
   [:inputSource="uniform";vectorize_lhs=3]
-    expected: [FAIL, PASS]
+    expected:
+      if os == "linux": [PASS, FAIL]
+      [FAIL, PASS]
 
   [:inputSource="uniform";vectorize_lhs=4]
     expected: FAIL
