--- a/testing/web-platform/mozilla/meta/webgpu/chunked/32/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/32/cts.https.html.ini
@@ -210,7 +210,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
