--- a/testing/web-platform/mozilla/meta/webgpu/chunked/34/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/34/cts.https.html.ini
@@ -999,7 +999,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -1250,7 +1252,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
