--- a/testing/web-platform/mozilla/meta/webgpu/chunked/35/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/35/cts.https.html.ini
@@ -782,7 +782,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [PASS, FAIL]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
