--- a/testing/web-platform/mozilla/meta/webgpu/chunked/4/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/4/cts.https.html.ini
@@ -774,7 +774,6 @@
 
 
 [cts.https.html?q=webgpu:api,operation,memory_sync,buffer,single_buffer:rw:*]
-  # TODO: <https://bugzilla.mozilla.org/show_bug.cgi?id=1849016>
   expected: [OK, TIMEOUT]
   [:boundary="queue-op";readOp="b2b-copy";readContext="command-encoder";writeOp="write-buffer";writeContext="queue"]
     expected:
@@ -1154,7 +1153,6 @@
 
 
 [cts.https.html?q=webgpu:api,operation,memory_sync,buffer,single_buffer:wr:*]
-  # TODO: <https://bugzilla.mozilla.org/show_bug.cgi?id=1849016>
   expected: [OK, TIMEOUT]
   [:boundary="queue-op";readOp="b2b-copy";readContext="command-encoder";writeOp="write-buffer";writeContext="queue"]
     expected:
@@ -1182,7 +1180,9 @@
       [PASS, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";readOp="b2b-copy";readContext="command-encoder";writeOp="storage";writeContext="render-bundle-encoder"]
-    expected: [TIMEOUT, NOTRUN, FAIL]
+    expected:
+      if os == "linux": [FAIL, PASS, TIMEOUT, NOTRUN]
+      [FAIL, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";readOp="b2t-copy";readContext="command-encoder";writeOp="write-buffer";writeContext="queue"]
     expected:
@@ -1340,7 +1340,9 @@
       [PASS, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";readOp="constant-uniform";readContext="render-pass-encoder";writeOp="b2b-copy";writeContext="command-encoder"]
-    expected: [FAIL, TIMEOUT, NOTRUN]
+    expected:
+      if os == "linux": [FAIL, PASS, TIMEOUT, NOTRUN]
+      [FAIL, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";readOp="constant-uniform";readContext="render-pass-encoder";writeOp="t2b-copy";writeContext="command-encoder"]
     expected: [TIMEOUT, NOTRUN, FAIL]
@@ -1780,7 +1782,7 @@
 
   [:boundary="queue-op";write={"op":"write-texture","in":"queue"};read={"op":"t2t-copy","in":"command-encoder"}]
     expected:
-      if os == "linux": [PASS, TIMEOUT, NOTRUN]
+      if os == "linux": [PASS, FAIL, TIMEOUT, NOTRUN]
       if os == "mac": FAIL
 
   [:boundary="queue-op";write={"op":"write-texture","in":"queue"};read={"op":"sample","in":"compute-pass-encoder"}]
