--- a/testing/web-platform/mozilla/meta/webgpu/chunked/45/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/45/cts.https.html.ini
@@ -220,7 +220,9 @@
     expected: FAIL
 
   [:inputSource="storage_rw";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_rw";vectorize=3]
     expected: FAIL
@@ -671,7 +673,9 @@
     expected: FAIL
 
   [:inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if os == "linux": [FAIL, PASS]
+      FAIL
 
   [:inputSource="storage_r";vectorize=3]
     expected: FAIL
