Bug 1851721: test(webgpu): adjust CTS expectations on Windows to observe recent intermittents r=webgpu-reviewers,jgilbert
Differential Revision: https://phabricator.services.mozilla.com/D187616

--- a/testing/web-platform/mozilla/meta/webgpu/chunked/30/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/30/cts.https.html.ini
@@ -16,6 +16,7 @@
   [:inputSource="uniform";vectorize=2]
     expected:
       if os == "linux": [FAIL, PASS]
+      if (os == "win") and not debug: [FAIL, PASS]
       FAIL
 
   [:inputSource="uniform";vectorize=3]
@@ -97,6 +98,7 @@
   [:inputSource="storage_rw";vectorize=2]
     expected:
       if os == "linux": [FAIL, PASS]
+      if (os == "win") and not debug: [FAIL, PASS]
       FAIL
 
   [:inputSource="storage_rw";vectorize=3]
@@ -362,7 +364,9 @@
     expected: FAIL
 
   [:type="i32";inputSource="storage_r";vectorize=2]
-    expected: FAIL
+    expected:
+      if (os == "win") and not debug: [FAIL, PASS]
+      FAIL
 
   [:type="i32";inputSource="storage_r";vectorize=3]
     expected: FAIL
