--- a/testing/web-platform/mozilla/meta/webgpu/chunked/31/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/31/cts.https.html.ini
@@ -364,6 +364,7 @@
   [:inputSource="storage_rw";vectorize=2]
     expected:
       if os == "linux": [FAIL, PASS]
+      if (os == "win") and not debug: [FAIL, PASS]
       FAIL
 
   [:inputSource="storage_rw";vectorize=3]
@@ -544,6 +545,7 @@
   [:inputSource="storage_rw";vectorize=2]
     expected:
       if os == "linux": [FAIL, PASS]
+      if (os == "win") and not debug: [FAIL, PASS]
       FAIL
 
   [:inputSource="storage_rw";vectorize=3]
@@ -639,6 +641,7 @@
   [:inputSource="uniform";vectorize=2]
     expected:
       if os == "linux": [FAIL, PASS]
+      if (os == "win") and not debug: [FAIL, PASS]
       FAIL
 
   [:inputSource="uniform";vectorize=3]
@@ -869,6 +872,7 @@
   [:inputSource="storage_rw";vectorize_lhs=3]
     expected:
       if os == "linux": [FAIL, PASS]
+      if (os == "win") and not debug: [FAIL, PASS]
       FAIL
 
   [:inputSource="storage_rw";vectorize_lhs=4]
@@ -967,6 +971,7 @@
   [:inputSource="storage_r";vectorize=2]
     expected:
       if os == "linux": [FAIL, PASS]
+      if (os == "win") and not debug: [FAIL, PASS]
       FAIL
 
   [:inputSource="storage_r";vectorize=3]
