--- a/testing/web-platform/mozilla/meta/webgpu/chunked/35/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/35/cts.https.html.ini
@@ -784,6 +784,7 @@
   [:inputSource="storage_rw";vectorize=2]
     expected:
       if os == "linux": [PASS, FAIL]
+      if (os == "win") and not debug: [FAIL, PASS]
       FAIL
 
   [:inputSource="storage_rw";vectorize=3]
