--- a/testing/web-platform/mozilla/meta/webgpu/chunked/32/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/32/cts.https.html.ini
@@ -254,6 +254,7 @@
   [:inputSource="uniform";vectorize=2]
     expected:
       if os == "linux": [FAIL, PASS]
+      if (os == "win") and not debug: [FAIL, PASS]
       FAIL
 
   [:inputSource="uniform";vectorize=3]
@@ -659,6 +660,7 @@
   [:inputSource="storage_rw";vectorize=2]
     expected:
       if os == "linux": [FAIL, PASS]
+      if (os == "win") and not debug: [FAIL, PASS]
       FAIL
 
   [:inputSource="storage_rw";vectorize=3]
@@ -1021,6 +1023,7 @@
   [:inputSource="storage_rw";vectorize=2]
     expected:
       if os == "linux": [FAIL, PASS]
+      if (os == "win") and debug: [FAIL, PASS]
       FAIL
 
   [:inputSource="storage_rw";vectorize=3]
@@ -1202,6 +1205,7 @@
   [:inputSource="storage_r";overload="vec3"]
     expected:
       if os == "linux": [FAIL, PASS]
+      if (os == "win") and debug: [FAIL, PASS]
       FAIL
 
   [:inputSource="storage_r";overload="vec4"]
@@ -1459,6 +1463,7 @@
   [:inputSource="storage_rw";vectorize=2]
     expected:
       if os == "linux": [FAIL, PASS]
+      if (os == "win") and not debug: [FAIL, PASS]
       FAIL
 
   [:inputSource="storage_rw";vectorize=3]
