--- a/testing/web-platform/mozilla/meta/webgpu/chunked/34/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/34/cts.https.html.ini
@@ -418,6 +418,7 @@
   [:inputSource="storage_r";vectorize=2]
     expected:
       if os == "linux": [FAIL, PASS]
+      if (os == "win") and not debug: [FAIL, PASS]
       FAIL
 
   [:inputSource="storage_r";vectorize=3]
@@ -567,6 +568,7 @@
   [:inputSource="storage_r";vectorize=2]
     expected:
       if os == "linux": [FAIL, PASS]
+      if (os == "win") and not debug: [FAIL, PASS]
       FAIL
 
   [:inputSource="storage_r";vectorize=3]
@@ -811,6 +813,7 @@
   [:inputSource="storage_r";vectorize=2]
     expected:
       if os == "linux": [FAIL, PASS]
+      if (os == "win") and not debug: [FAIL, PASS]
       FAIL
 
   [:inputSource="storage_r";vectorize=3]
