--- a/testing/web-platform/mozilla/meta/webgpu/chunked/4/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/4/cts.https.html.ini
@@ -779,6 +779,7 @@
 
 
 [cts.https.html?q=webgpu:api,operation,memory_sync,buffer,single_buffer:rw:*]
+  # TODO: <https://bugzilla.mozilla.org/show_bug.cgi?id=1849016>
   expected: [OK, TIMEOUT]
   [:boundary="queue-op";readOp="b2b-copy";readContext="command-encoder";writeOp="write-buffer";writeContext="queue"]
     expected:
@@ -826,7 +827,10 @@
       [PASS, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";readOp="b2t-copy";readContext="command-encoder";writeOp="storage";writeContext="compute-pass-encoder"]
-    expected: [FAIL, PASS, TIMEOUT, NOTRUN]
+    expected:
+      if (os == "win") and not debug: [PASS, FAIL, TIMEOUT, NOTRUN]
+      if (os == "win") and debug: [PASS, FAIL, TIMEOUT, NOTRUN]
+      [FAIL, PASS, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";readOp="b2t-copy";readContext="command-encoder";writeOp="storage";writeContext="render-pass-encoder"]
     expected: [TIMEOUT, NOTRUN, FAIL]
@@ -858,7 +862,9 @@
       [PASS, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";readOp="storage-read";readContext="compute-pass-encoder";writeOp="b2b-copy";writeContext="command-encoder"]
-    expected: [FAIL, PASS, TIMEOUT, NOTRUN]
+    expected:
+      if (os == "win") and debug: [PASS, FAIL, TIMEOUT, NOTRUN]
+      [FAIL, PASS, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";readOp="storage-read";readContext="compute-pass-encoder";writeOp="t2b-copy";writeContext="command-encoder"]
     expected: [TIMEOUT, NOTRUN, FAIL]
@@ -1158,6 +1164,7 @@
 
 
 [cts.https.html?q=webgpu:api,operation,memory_sync,buffer,single_buffer:wr:*]
+  # TODO: <https://bugzilla.mozilla.org/show_bug.cgi?id=1849016>
   expected: [OK, TIMEOUT]
   [:boundary="queue-op";readOp="b2b-copy";readContext="command-encoder";writeOp="write-buffer";writeContext="queue"]
     expected:
@@ -1207,6 +1214,8 @@
   [:boundary="queue-op";readOp="b2t-copy";readContext="command-encoder";writeOp="storage";writeContext="compute-pass-encoder"]
     expected:
       if os == "linux": [PASS, FAIL, TIMEOUT, NOTRUN]
+      if (os == "win") and not debug: [PASS, FAIL, TIMEOUT, NOTRUN]
+      if (os == "win") and debug: [PASS, FAIL, TIMEOUT, NOTRUN]
       [FAIL, PASS, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";readOp="b2t-copy";readContext="command-encoder";writeOp="storage";writeContext="render-pass-encoder"]
@@ -1253,7 +1262,9 @@
       [PASS, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";readOp="storage-read";readContext="render-pass-encoder";writeOp="b2b-copy";writeContext="command-encoder"]
-    expected: [FAIL, PASS, TIMEOUT, NOTRUN]
+    expected:
+      if (os == "win") and debug: [PASS, FAIL, TIMEOUT, NOTRUN]
+      [FAIL, PASS, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";readOp="storage-read";readContext="render-pass-encoder";writeOp="t2b-copy";writeContext="command-encoder"]
     expected: [TIMEOUT, NOTRUN, FAIL]
@@ -1560,6 +1571,7 @@
   [:boundary="queue-op";writeOps=["write-buffer","storage"\];contexts=["queue","render-bundle-encoder"\]]
     expected:
       if os == "linux": [FAIL, PASS, TIMEOUT, NOTRUN]
+      if (os == "win") and not debug: [FAIL, PASS, TIMEOUT, NOTRUN]
       [FAIL, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";writeOps=["b2b-copy","write-buffer"\];contexts=["command-encoder","queue"\]]
@@ -1593,7 +1605,9 @@
       [PASS, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";writeOps=["b2b-copy","storage"\];contexts=["command-encoder","compute-pass-encoder"\]]
-    expected: [PASS, FAIL, TIMEOUT, NOTRUN]
+    expected:
+      if (os == "win") and debug: [FAIL, PASS, TIMEOUT, NOTRUN]
+      [PASS, FAIL, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";writeOps=["b2b-copy","storage"\];contexts=["command-encoder","render-pass-encoder"\]]
     expected: [TIMEOUT, NOTRUN, FAIL]
