--- a/testing/web-platform/mozilla/meta/webgpu/chunked/45/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/45/cts.https.html.ini
@@ -200,6 +200,7 @@
   [:inputSource="uniform";vectorize=2]
     expected:
       if os == "linux": [FAIL, PASS]
+      if (os == "win") and not debug: [FAIL, PASS]
       FAIL
 
   [:inputSource="uniform";vectorize=3]
@@ -420,6 +421,7 @@
   [:inputSource="storage_r";vectorize=2]
     expected:
       if os == "linux": [FAIL, PASS]
+      if (os == "win") and not debug: [FAIL, PASS]
       FAIL
 
   [:inputSource="storage_r";vectorize=3]
@@ -664,6 +666,7 @@
   [:inputSource="uniform";vectorize=2]
     expected:
       if os == "linux": [FAIL, PASS]
+      if (os == "win") and not debug: [FAIL, PASS]
       FAIL
 
   [:inputSource="uniform";vectorize=3]
