Bug 1851721: test(webgpu): adjust CTS expectations on MacOS to observe recent intermittents r=webgpu-reviewers,jgilbert
Differential Revision: https://phabricator.services.mozilla.com/D187617

--- a/testing/web-platform/mozilla/meta/webgpu/chunked/4/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/4/cts.https.html.ini
@@ -1606,6 +1606,7 @@
 
   [:boundary="queue-op";writeOps=["b2b-copy","storage"\];contexts=["command-encoder","compute-pass-encoder"\]]
     expected:
+      if os == "mac": [FAIL, PASS, TIMEOUT, NOTRUN]
       if (os == "win") and debug: [FAIL, PASS, TIMEOUT, NOTRUN]
       [PASS, FAIL, TIMEOUT, NOTRUN]
 
