--- a/testing/web-platform/mozilla/meta/webgpu/chunked/4/cts.https.html.ini
+++ b/testing/web-platform/mozilla/meta/webgpu/chunked/4/cts.https.html.ini
@@ -768,9 +768,14 @@
 
 
 [cts.https.html?q=webgpu:api,operation,onSubmittedWorkDone:many,serial:*]
+  expected:
+    if (os == "win") and not debug: TIMEOUT
+    if os == "linux": TIMEOUT
   [:]
     expected:
       if os == "mac": FAIL
+      if (os == "win") and debug: PASS
+      TIMEOUT
 
 
 [cts.https.html?q=webgpu:api,operation,memory_sync,buffer,single_buffer:rw:*]
@@ -1597,7 +1602,10 @@
     expected: [TIMEOUT, NOTRUN, FAIL]
 
   [:boundary="queue-op";writeOps=["t2b-copy","storage"\];contexts=["command-encoder","compute-pass-encoder"\]]
-    expected: [TIMEOUT, NOTRUN, FAIL]
+    expected:
+      if (os == "win") and not debug: [FAIL, PASS, TIMEOUT, NOTRUN]
+      if os == "linux": [FAIL, PASS, TIMEOUT, NOTRUN]
+      [FAIL, TIMEOUT, NOTRUN]
 
   [:boundary="queue-op";writeOps=["t2b-copy","storage"\];contexts=["command-encoder","render-pass-encoder"\]]
     expected: [TIMEOUT, NOTRUN, FAIL]
